--- a/css/style.sass
+++ b/css/style.sass
@@ -251,7 +251,7 @@ section
       .wrapper
          max-width: 1440px
          max-height: 810px
-         overflow-x: scroll
+         overflow: hidden // turn on auto for mobile
          position: relative
          border-radius: 5px
          box-shadow: 0 0 10px 1px rgba(0, 0, 0, .6)
