--- a/css/style.sass
+++ b/css/style.sass
@@ -335,6 +335,8 @@ footer
    position: relative
    top: -70px
    visibility: hidden
+.s1 
+   margin-left: 0%
    //for slider
 #r1:checked ~ .s1
    margin-left: 0%
