--- a/css/style.css
+++ b/css/style.css
@@ -10,20 +10,19 @@ html {
 }
 
 body {
-  background-color: #eeeeee;
+  background: url("../sources/img/background1.jpg") 50% 90% fixed no-repeat;
 }
 
 header {
   min-height: 800px;
   width: 100%;
   height: 100vh;
-  background: url("../sources/img/header.jpg") 50% 0/cover no-repeat;
   position: relative;
-  -webkit-box-shadow: 0 3px 10px 1px rgba(0, 0, 0, 0.6);
-          box-shadow: 0 3px 10px 1px rgba(0, 0, 0, 0.6);
+  -webkit-box-shadow: 0 3px 10px 1px rgba(0, 0, 0, 0.7);
+          box-shadow: 0 3px 10px 1px rgba(0, 0, 0, 0.7);
 }
 
-header .toning-layer {
+header .header-filter {
   width: 100%;
   height: 100%;
   background-color: #000;
@@ -225,6 +224,7 @@ section {
 }
 
 section .team-list {
+  height: 100%;
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -240,17 +240,21 @@ section .team-list {
       justify-content: space-around;
 }
 
+section .team-list.bg-filter {
+  background-color: rgba(51, 51, 51, 0.5);
+}
+
 section .team-list .container {
   width: 100%;
   max-width: 1190px;
-  padding: 0 50px;
+  padding: 10px 50px 30px 50px;
 }
 
 section .team-list p {
-  margin: 15px 0 10px 0;
+  margin: 0 0 10px 0;
   font-size: 40px;
   font-family: "Open Sans", sans-serif;
-  color: #424242;
+  color: #ffffff;
   text-transform: uppercase;
   width: 100%;
   border-bottom: 3px #f5cb5c solid;
@@ -258,6 +262,7 @@ section .team-list p {
 }
 
 section .team-list .wrapper {
+  border-radius: 10px;
   width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -267,7 +272,6 @@ section .team-list .wrapper {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  padding-bottom: 30px;
 }
 
 section .team-list .wrapper .team-item {
@@ -283,6 +287,8 @@ section .team-list .wrapper .team-item {
           transition-duration: .3s;
   overflow: hidden;
   position: relative;
+  -webkit-box-shadow: 0 5px 10px 2px rgba(0, 0, 0, 0.6);
+          box-shadow: 0 5px 10px 2px rgba(0, 0, 0, 0.6);
 }
 
 section .team-list .wrapper .team-item img {
@@ -334,8 +340,6 @@ section .team-list .wrapper .team-item:hover {
           transform: translateY(-5px);
   -webkit-transition-duration: .3s;
           transition-duration: .3s;
-  -webkit-box-shadow: 0 0 8px 1px rgba(0, 0, 0, 0.6);
-          box-shadow: 0 0 8px 1px rgba(0, 0, 0, 0.6);
 }
 
 section .team-list .wrapper .team-item:hover .hover-panel {
@@ -406,8 +410,8 @@ section .pricelist-block .wrapper .table .dark {
 }
 
 section .photo-slider {
-  height: 92vh;
-  width: 100%;
+  padding: 75px 75px;
+  max-width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -417,21 +421,20 @@ section .photo-slider {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background-color: #424242;
+  background: -webkit-gradient(linear, left top, left bottom, from(rgba(66, 66, 66, 0.9)), color-stop(90%, #333333));
+  background: linear-gradient(180deg, rgba(66, 66, 66, 0.9) 0%, #333333 90%);
 }
 
 section .photo-slider .wrapper {
   max-width: 1440px;
-  max-height: 810px;
   position: relative;
 }
 
 section .photo-slider .wrapper .slider-block {
-  overflow-x: auto;
+  overflow-x: hidden;
   border-radius: 5px;
   -webkit-box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.6);
           box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.6);
-  background-color: #f5cb5c;
   border-bottom: 2px #f5cb5c solid;
   border-top: 2px #f5cb5c solid;
   -ms-scroll-snap-type: x mandatory;
@@ -510,6 +513,10 @@ section .about-us {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+section .about-us.bg-filter {
+  background-color: rgba(51, 51, 51, 0.5);
 }
 
 section .about-us .wrapper {
